# LLM-tuning

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  大模型QLoRa微调.ipynb  微调对话测试.ipynb
dataset/: chinese_law_ft_dataset.json
datasets/: data_info.json
src/peft/: fine_tuning.ipynb  lA3_tuning.ipynb  lora_tuning.ipynb  p_tuning.ipynb  prefix_tuning.ipynb  prompt_tuning.ipynb  qlora_tuning.ipynb  大模型LoRa微调.ipynb  大模型全量微调.ipynb
src/peft/.ipynb_checkpoints/: lA3_tuning-checkpoint.ipynb
src/quantize/: awq.ipynb  gptq.ipynb
src/rl/: grpo_rl.ipynb
